--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,1 +1,2 @@
  @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+ @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
