--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,1 +1,16 @@
- @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "tar-bootstrap/bootstrap";
+
+input, textarea:focus {
+  outline: none;
+}
+
+.tar-error {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+}
+
+.tar-error > ul > li {
+  list-style: none;
+}
