--- a/resources/assets/sass/tar-bootstrap/bootstrap/_list-group.scss
+++ b/resources/assets/sass/tar-bootstrap/bootstrap/_list-group.scss
@@ -24,16 +24,11 @@
   padding: 10px 15px;
   // Place the border on the list items and negative margin up for better styling
   margin-bottom: -1px;
-  background-color: $list-group-bg;
-  border: 1px solid $list-group-border;
+  background-color: transparent;
 
   // Round the first and last items
-  &:first-child {
-    @include border-top-radius($list-group-border-radius);
-  }
   &:last-child {
     margin-bottom: 0;
-    @include border-bottom-radius($list-group-border-radius);
   }
 }
 
