--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,8 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "../../../node_modules/simditor/styles/simditor.scss";
+@import "../../../node_modules/simditor-markdown/styles/simditor-markdown.scss";
+
+
 
 input, textarea:focus {
   outline: none;
@@ -9,10 +13,12 @@ input, textarea:focus {
   right: 0;
   bottom: 0;
   z-index: 999;
-}
 
-.tar-error > ul > li {
-  list-style: none;
+    ul {
+      li {
+        list-style: none;
+      }
+    }
 }
 
 // 侧边栏
@@ -20,8 +26,13 @@ input, textarea:focus {
   margin: 1em auto;
 }
 
-.tar-tags-box > .list-group > .list-group-item {
-  margin: 0.5em;
+.tar-tags-box {
+  > .list-group {
+    > .list-group-item {
+      margin: 0.5em;
+    }
+  }
+
 }
 
 // 首页
