--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,7 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "../../../node_modules/simditor/styles/simditor.scss";
 @import "../../../node_modules/simditor-markdown/styles/simditor-markdown.scss";
+@import "common/index";
 
 input, textarea:focus {
   outline: none;
