--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,87 +2,6 @@
 @import "../../../node_modules/simditor/styles/simditor.scss";
 @import "../../../node_modules/simditor-markdown/styles/simditor-markdown.scss";
 @import "common/index";
-
-input, textarea:focus {
-  outline: none;
-}
-
-.tar-error {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  z-index: 999;
-
-  ul {
-    li {
-      list-style: none;
-    }
-  }
-}
-
-// 侧边栏
-.tar-sidebar-panel {
-  margin: 1em auto;
-}
-
-.tar-tags-box {
-  > .list-group {
-    > .list-group-item {
-      margin: 0.5em;
-    }
-  }
-
-}
-
-// 首页
-.tar-jumbotron {
-  margin-top: -20px;
-}
-
-// 控制面板
-.tar-cp-nav {
-  background-color: #333;
-  max-width: 150px;
-
-  img {
-    width: 60px;
-  }
-
-  ul {
-    background-color: #333;
-
-    li {
-      background-color: #333;
-      border: 0;
-
-      span {
-        font-size: 1em;
-        margin-right: 0.5em;
-      }
-
-    }
-  }
-}
-
-.tar-cp-top {
-  font-size: 0.8em;
-
-  ul {
-    margin-bottom: 0;
-
-    li {
-      padding: 0;
-      margin-right: 5px;
-      border: 0;
-
-      a {
-        color: $gray-light;
-        text-decoration: none;
-      }
-    }
-  }
-}
-
-.tar-overflow-initial {
-  overflow: initial;
-}
+@import "index/index";
+@import "control/index";
+@import "sidebar/index";
