--- a/resources/assets/sass/control/index.scss
+++ b/resources/assets/sass/control/index.scss
@@ -1,4 +1,4 @@
-// 控制面板
+// 控制面板左侧导航栏
 .tar-cp-nav {
   background-color: #333;
   max-width: 150px;
@@ -23,6 +23,7 @@
   }
 }
 
+// 控制面板顶部
 .tar-cp-top {
   font-size: 0.8em;
 
