--- a/resources/assets/sass/control/index.scss
+++ b/resources/assets/sass/control/index.scss
@@ -1,44 +1,2 @@
-// 控制面板左侧导航栏
-.tar-cp-nav {
-  background-color: #333;
-  max-width: 150px;
-
-  img {
-    width: 60px;
-  }
-
-  ul {
-    background-color: #333;
-
-    li {
-      background-color: #333;
-      border: 0;
-
-      span {
-        font-size: 1em;
-        margin-right: 0.5em;
-      }
-
-    }
-  }
-}
-
-// 控制面板顶部
-.tar-cp-top {
-  font-size: 0.8em;
-
-  ul {
-    margin-bottom: 0;
-
-    li {
-      padding: 0;
-      margin-right: 5px;
-      border: 0;
-
-      a {
-        color: $gray-light;
-        text-decoration: none;
-      }
-    }
-  }
-}
+@import "nav";
+@import "top";
