--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -1,1 +1,7 @@
-@import "../../../../node_modules/jquery-unslider/dist/css/unslider";
+@import "../../../../node_modules/jquery-unslider/dist/sass/unslider";
+@import "../../../../node_modules/jquery-unslider/dist/sass/unslider-dots";
+@import "slider";
+
+.indxNavMrgnBtm {
+  margin-bottom: 0;
+}
