--- a/resources/assets/sass/article/index.scss
+++ b/resources/assets/sass/article/index.scss
@@ -1,12 +1,15 @@
 @import "list";
 
 .article-content {
+  width: 100%;
   overflow: hidden;
   word-wrap: break-word;
   word-break: normal;
+  padding: 1rem;
 
   img {
     width: 100%;
     height: 100%;
+    margin: 1rem auto;
   }
 }
