article-list-style

--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -13,4 +13,10 @@
   hr {
     margin-top: 0.5rem;
   }
+
+  .tar-article-list-decs {
+    word-break: break-all;
+    word-wrap: break-word;
+    overflow: hidden;
+  }
 }
