--- a/resources/assets/sass/control/todo.scss
+++ b/resources/assets/sass/control/todo.scss
@@ -2,6 +2,7 @@
   background-color: #e7e7e7;
   margin-bottom: 1rem;
   border-radius: 0.25rem;
+  display: none;
 
   > form {
     > .form-group {
