--- a/resources/assets/sass/control/todo.scss
+++ b/resources/assets/sass/control/todo.scss
@@ -1,3 +1,5 @@
+@import "../../../../node_modules/bootstrap-datetime-picker/css/bootstrap-datetimepicker.min";
+
 .tar-add-todo {
   background-color: #e7e7e7;
   margin-bottom: 1rem;
@@ -17,9 +19,17 @@
   li {
     margin-bottom: 1rem;
 
-    .glyphicon-arrow-right {
-      float: left;
-      padding-top: 0.75rem;
+    .btn-group {
+      .dropdown-toggle {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+        margin-right: -1px;
+      }
+    }
+
+    .tar-todo-content {
+      overflow: hidden;
+      text-align: left;
     }
   }
 }
