create-todo-style

--- a/resources/assets/sass/control/todo.scss
+++ b/resources/assets/sass/control/todo.scss
@@ -14,7 +14,13 @@
   }
 
   > form {
+    padding-left: 0;
+    padding-right: 0;
+
     > .form-group {
+      padding-left: 2px;
+      padding-right: 2px;
+
       > input {
         width: 100%;
       }
