--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -1,5 +1,6 @@
 @import "../../../../node_modules/jquery-unslider/dist/sass/unslider";
 @import "../../../../node_modules/jquery-unslider/dist/sass/unslider-dots";
+@import "../../../../node_modules/swiper/dist/css/swiper.min";
 @import "slider";
 
 .indxNavMrgnBtm {
