--- a/resources/assets/sass/control/setting.scss
+++ b/resources/assets/sass/control/setting.scss
@@ -4,6 +4,27 @@
     li {
         overflow: hidden;
 
+        .tar-cps-bimg {
+            text-align: center;
+            overflow: hidden;
+            font-size: 7rem;
+            background: url("http://7xnswo.com1.z0.glb.clouddn.com/uploads/2016-11-12/0ed742a6f8a3d58f87cfa5ca74a56afc.jpg?imageView2/1/w/960/h/400") no-repeat;
+            background-size: 100%;
+
+            span {
+                cursor: pointer;
+                color: #fff;
+                opacity: 0.5;
+                filter: Alpha(opacity=50);
+            }
+
+            span:hover {
+                color: #337ab7;
+                opacity: 1;
+                filter: Alpha(opacity=100);
+            }
+        }
+
         .tar-cps-binfo {
 
         }
