--- a/resources/assets/sass/control/setting.scss
+++ b/resources/assets/sass/control/setting.scss
@@ -13,6 +13,7 @@
 
             span {
                 cursor: pointer;
+                margin: 1rem auto;
                 color: #fff;
                 opacity: 0.5;
                 filter: Alpha(opacity=50);
@@ -40,5 +41,25 @@
         li {
             line-height: 2.4em;
         }
+    }
+}
+
+.tar-cps-upfile {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+
+    span {
+
+    }
+
+    input[type=file] {
+        position: absolute;
+        top: 0;
+        right: 0;
+        opacity: 0;
+        font-size: 100px;
+        cursor: pointer;
+        width: 100%;
     }
 }
