--- a/resources/assets/sass/control/setting.scss
+++ b/resources/assets/sass/control/setting.scss
@@ -47,11 +47,7 @@
 .tar-cps-upfile {
     position: relative;
     overflow: hidden;
-    cursor: pointer;
-
-    span {
-
-    }
+    cursor: default;
 
     input[type=file] {
         position: absolute;
@@ -59,7 +55,7 @@
         right: 0;
         opacity: 0;
         font-size: 100px;
-        cursor: pointer;
         width: 100%;
+        height: 100%;
     }
 }
