--- a/resources/assets/sass/article/index.scss
+++ b/resources/assets/sass/article/index.scss
@@ -1,20 +1,22 @@
-@import "list";
 .tar-article-box {
-  hr {
-    margin-top: 0.5rem;
-  }
-
-  .article-content {
-    width: 100%;
-    overflow: hidden;
-    word-wrap: break-word;
-    word-break: normal;
-    padding: 1rem;
-
-    img {
-      width: 100%;
-      height: 100%;
-      margin: 1rem auto;
+    hr {
+        margin-top: 0.5rem;
     }
-  }
+
+    .article-content {
+        width: 100%;
+        overflow: hidden;
+        word-wrap: break-word;
+        word-break: normal;
+        padding: 1rem;
+
+        img {
+            width: 100%;
+            height: 100%;
+            margin: 1rem auto;
+        }
+    }
 }
+
+@import "list";
+@import "form";
