writer-adjust-ok

--- a/resources/assets/sass/article/form.scss
+++ b/resources/assets/sass/article/form.scss
@@ -1,3 +1,24 @@
+.tar-article-form {
+    #content-textarea {
+        border: none;
+        box-shadow: none;
+    }
+
+    .simditor {
+        border: none;
+
+        .simditor-wrapper {
+            background-color: #fbf7ed;
+            box-shadow: 0 0 5px #ccc;
+        }
+
+        .simditor-body {
+            min-height: 450px;
+        }
+
+    }
+}
+
 .tar-artl-title {
     border: none;
     border-radius: 0;
@@ -5,6 +26,12 @@
     line-height: 2.5rem;
     font-size: 2rem;
     border-bottom: 1px solid #c9d8db;
+    text-align: center;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    background-color: #fbf7ed;
 }
 
 .tar-artl-title:focus {
@@ -16,5 +43,8 @@
 }
 
 .tar-artl-ssbtn {
-    overflow: hidden;
+    z-index: 2;
+    position: fixed;
+    bottom: 0;
+    right: 0.2em;
 }
