--- a/resources/assets/sass/control/setting.scss
+++ b/resources/assets/sass/control/setting.scss
@@ -48,14 +48,46 @@
     position: relative;
     overflow: hidden;
     cursor: default;
+    text-align: center;
+    background: url("http://7xnswo.com1.z0.glb.clouddn.com/uploads/2016-11-12/0ed742a6f8a3d58f87cfa5ca74a56afc.jpg?imageView2/1/w/960/h/400") no-repeat;
+    background-size: 100%;
+    width: 36em;
+    height: 15em;
+    margin-left: auto;
+    margin-right: auto;
+
+    span {
+        font-size: 12rem;
+        line-height: 16rem;
+        color: #fff;
+        opacity: 0.5;
+        filter: Alpha(opacity=50);
+        cursor: pointer;
+    }
+
+    span:hover {
+        color: #337ab7;
+        opacity: 1;
+        filter: Alpha(opacity=100);
+    }
 
     input[type=file] {
         position: absolute;
         top: 0;
         right: 0;
         opacity: 0;
-        font-size: 100px;
         width: 100%;
         height: 100%;
+        font-size: 0;
+        cursor: pointer;
     }
+
+    input[type=file]:hover {
+        opacity: 0;
+        filter: Alpha(opacity=0);
+    }
+}
+
+.tar-cps-bnrprgrs {
+    margin-top: 1em;
 }
