fixed-a-bug-for-simditor-markdown

--- a/resources/assets/sass/article/form.scss
+++ b/resources/assets/sass/article/form.scss
@@ -16,6 +16,12 @@
             min-height: 450px;
         }
 
+        .markdown-editor {
+            textarea {
+                background-color: #fbf7ed;
+            }
+        }
+
     }
 }
 
