--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -1,5 +1,7 @@
 .tar-article-list {
     height: 10em;
+    box-shadow: 0 0 5px 3px #eee;
+    margin-bottom: 20px;
 
     .tar-article-info {
         h2 {
