--- a/resources/assets/sass/themes/_panels.scss
+++ b/resources/assets/sass/themes/_panels.scss
@@ -1,9 +1,9 @@
 .panel {
     border-radius: 0;
+    box-shadow: none;
 }
 .panel-default {
     border: 0;
-    box-shadow: 0 0 5px 3px #eee;
 
     .panel-heading {
         color: #fff;
