webpackJsonp-isnot-defined

--- a/resources/assets/sass/themes/_navbar.scss
+++ b/resources/assets/sass/themes/_navbar.scss
@@ -3,9 +3,9 @@
     border: 0;
 
     .navbar-nav {
-        li {
-            a {
-                color: #fff;
+        >li {
+            >a {
+                color: #7d0000;;
             }
         }
     }
