--- a/resources/assets/sass/control/index.scss
+++ b/resources/assets/sass/control/index.scss
@@ -50,7 +50,7 @@ body {
             border: 0;
 
             a {
-                color: $gray-light;
+                color: #777;
                 text-decoration: none;
             }
         }
