sass-variables-add

--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -9,7 +9,7 @@
 
         .tar-article-extra {
             padding-top: 1rem;
-            color: #ddd;
+            color: $gray-base;
         }
     }
 
