--- a/resources/assets/sass/themes/_panels.scss
+++ b/resources/assets/sass/themes/_panels.scss
@@ -6,8 +6,8 @@
     border: 0;
 
     .panel-heading {
-        color: #fff;
-        background-color: #000;
+        color: $white;
+        background-color: $black;
         border-top-right-radius: 0;
         border-top-left-radius: 0;
     }
