--- a/resources/assets/sass/themes/index.scss
+++ b/resources/assets/sass/themes/index.scss
@@ -1,6 +1,8 @@
+@import "variables";
 @import "navbar";
 @import "panels";
 @import "scaffolding";
 @import "forms";
 @import "buttons";
 @import "list-group";
+@import "input-groups";
