--- a/resources/assets/sass/themes/_panels.scss
+++ b/resources/assets/sass/themes/_panels.scss
@@ -6,7 +6,7 @@
     border: 0;
 
     .panel-heading {
-        color: $white;
+        color: $wineRed;
         background-color: $black;
         border-top-right-radius: 0;
         border-top-left-radius: 0;
