--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -1,3 +1,22 @@
 .nav-body-70 {
-  padding-top: 70px;
+    padding-top: 70px;
+}
+
+//.navbar-default .navbar-nav {
+//    > .dropdown > .tar-go {
+//        color: $white;
+//    }
+//}
+
+.navbar-default .navbar-nav {
+    > .open > .tar-go {
+        &,
+        &:hover,
+        &:focus,
+        &:active,
+        &:visited {
+            color: $black;
+            background-color: $wineRed;
+        }
+    }
 }
