--- a/resources/assets/sass/themes/_navbar.scss
+++ b/resources/assets/sass/themes/_navbar.scss
@@ -19,7 +19,7 @@
 
             &:hover,
             &:focus {
-                color: $wineRed;
+                color: $white;
                 background-color: $black;
             }
         }
