--- a/resources/assets/sass/themes/_list-group.scss
+++ b/resources/assets/sass/themes/_list-group.scss
@@ -1,14 +1,12 @@
 .list-group-item {
-    border: 0;
+    border-color: $cbackgroud;
+    border-radius: 4px;
 }
 
 .list-group-item:first-child {
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
+
 }
 
 .list-group-item:last-child {
     margin-bottom: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
 }
