--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -2,11 +2,10 @@
     padding-top: 70px;
 }
 
-//.navbar-default .navbar-nav {
-//    > .dropdown > .tar-go {
-//        color: $white;
-//    }
-//}
+.t-nav-brand {
+    background: url("/dist/img/logo.png") no-repeat center;
+    background-size: contain;
+}
 
 .navbar-default .navbar-nav {
     > .open > .tar-go {
@@ -16,7 +15,16 @@
         &:active,
         &:visited {
             color: $black;
-            background-color: $wineRed;
+            background-color: transparent;
         }
     }
+}
+
+.t-index-ftr {
+    margin-top: 30px;
+    margin-bottom: 0;
+    background-color: transparent;
+    border: 0;
+    border-radius: 0;
+    border-top: solid 1px $cfont-focus;
 }
