--- a/resources/assets/sass/themes/_variables.scss
+++ b/resources/assets/sass/themes/_variables.scss
@@ -1,5 +1,11 @@
+/* color */
 $wineRed:       #7d0000;
 $black:         #000;
 $white:         #fff;
 $gray-base:     #ccc;
 $gray-light:    #f9f9f9;
+$cbackgroud:    #FCFAF2;
+$cfont:         #1c1c1c;
+$cfont-focus:   #8E354A;
+
+$sfont-title:   16px;
