编辑器样式调整

--- a/resources/assets/sass/common/simditor.scss
+++ b/resources/assets/sass/common/simditor.scss
@@ -1,7 +1,8 @@
 .simditor {
-  .simditor-body {
-    img {
-      max-width: 100%;
+    .simditor-body {
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     }
-  }
 }
