--- a/resources/assets/sass/article/form.scss
+++ b/resources/assets/sass/article/form.scss
@@ -47,7 +47,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 80%;
-    background-color: #fbf7ed;
+    background-color: $cbackgroud;
 }
 
 .tar-artl-title:focus {
