--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -14,7 +14,7 @@
         &:focus,
         &:active,
         &:visited {
-            color: $black;
+            color: $cblack;
             background-color: transparent;
         }
     }
