--- a/resources/assets/sass/control/top.scss
+++ b/resources/assets/sass/control/top.scss
@@ -11,7 +11,7 @@
       border: 0;
 
       a {
-        color: $gray-light;
+        color: $cgray-light;
         text-decoration: none;
       }
     }
