--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -24,7 +24,7 @@
 
     .t-index-desc {
         writing-mode: vertical-rl;
-        background-color: $white;
+        background-color: $cwhite;
         width: 560px;
         height: 500px;
         padding: 30px;
