--- a/resources/assets/sass/themes/_variables.scss
+++ b/resources/assets/sass/themes/_variables.scss
@@ -1,11 +1,12 @@
 /* color */
-$wineRed:       #7d0000;
-$black:         #000;
-$white:         #fff;
-$gray-base:     #ccc;
-$gray-light:    #f9f9f9;
+$cblack:         #000;
+$cwhite:         #fff;
+$cgray-base:     #ccc;
+$cgray-light:    #f9f9f9;
 $cbackgroud:    #FCFAF2;
 $cfont:         #1c1c1c;
 $cfont-focus:   #8E354A;
+$ctag-backgroud:#D7C4BB;
+$ctag-color:    #8E354A;
 
 $sfont-title:   16px;
