--- a/resources/assets/sass/themes/_variables.scss
+++ b/resources/assets/sass/themes/_variables.scss
@@ -6,7 +6,8 @@ $cgray-light:    #f9f9f9;
 $cbackgroud:    #FCFAF2;
 $cfont:         #1c1c1c;
 $cfont-focus:   #8E354A;
-$ctag-backgroud:#D7C4BB;
+$ctag-backgroud:        #D7C4BB;
 $ctag-color:    #8E354A;
+$carticle-backgroud:    #FCFAF2;
 
 $sfont-title:   16px;
