--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -1,6 +1,45 @@
+.t-rtcl-lstbx {
+    margin-top: 20px;
+    position:relative;
+    display: inline-block;
+    background: -webkit-gradient(linear, 0% 20%, 0% 1000%, from($cwhite), to($cwhite), color-stop(.1,$carticle-backgroud));
+    border: 1px solid $cgray-base;
+    -webkit-box-shadow: 0 3px 30px rgba(0, 0, 0, 0.1) inset;
+    -webkit-border-bottom-right-radius: 6px 50px;
+}
+
+.t-rtcl-lstbx:before{
+    content: '';
+    width: 50px;
+    height: 100px;
+    position:absolute;
+    bottom:0; right:0;
+    -webkit-box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.1);
+    z-index:-1;
+    -webkit-transform: translate(-35px,-40px)
+    skew(0deg,30deg)
+    rotate(-25deg);
+}
+.t-rtcl-lstbx:after{
+    content: '';
+    width: 100px;
+    height: 100px;
+    top:0; left:0;
+    position:absolute;
+    display: inline-block;
+    z-index:-1;
+    -webkit-box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.2);
+    -webkit-transform: rotate(2deg)
+    translate(20px,25px)
+    skew(20deg);
+}
+
 .tar-article-list {
     min-height: 100px;
-    margin-bottom: 20px;
+    border-radius: 0;
+    background-color: transparent;
+    border: none;
+    margin-bottom: 30px;
 
     .tar-article-info {
         margin-bottom: 10px;
