--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -21,10 +21,10 @@
 }
 
 .t-index-ftr {
-    margin-top: 30px;
-    margin-bottom: 0;
-    background-color: transparent;
+    background-color: $cwhite;
     border: 0;
     border-radius: 0;
     border-top: solid 1px $cfont-focus;
+    margin-bottom: 0;
+    display: none;
 }
